@@ -11,6 +11,9 @@ Release history for Comment-Spell
  - runtime: +1 ↓1
  - test: +1 (recommends: ↑2)
 
+ [Documentation]
+ - Document all functions internally in a basic non-pod way, because POD is ugly.
+
 0.001001 2014-09-28T04:36:41Z
  [Bugfix]
  - Require newer version of Pod::Wordlist
